--- a/Backend/Lotto_Project/src/main/resources/application.properties
+++ b/Backend/Lotto_Project/src/main/resources/application.properties
@@ -15,8 +15,8 @@ pring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #Mail_設定
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kennymax22581997@gmail.com
-spring.mail.password=zajuywhtncnyajtq
+spring.mail.username=programkaitest@gmail.com
+spring.mail.password=whvczrtpamrmjmqb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
